# trace

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REVIEW_NOTES.md  TODO.md  architecture-review-notes.md  cliff.toml  patch_20251231_214848_outbox_required.gitdiff  remaining-questions.md  trace-architecture-summary.md
.github/workflows/: sync-agent-standards.yml
cleanup_tasks/: 001-slim-docs-portal.md  002-standardize-docs-entrypoint.md  003-remove-standards-folder.md  004-consolidate-query-service-docs.md  005-consolidate-dispatcher-docs.md  006-merge-dag-configuration-docs.md  007-consolidate-milestone-micro-specs.md  008-deploy-docs-reduction.md  009-doc-hygiene-sweep.md  010-align-cryo-ingest-operator-doc.md  011-align-cryo-cli-docs.md  012-docs-navigation-workflow.md  013-specs-index-jtbd.md  014-normalize-block-range-semantics.md  015-demote-canonical-ddl-and-dedrift-data-model-docs.md  016-move-operator-recipes-to-examples.md  017-fix-mermaid-label-parentheses.md  018-modularize-interface-contracts.md  019-rehome-operator-docs-as-specs.md  020-clarify-data-versioning-doc-ownership.md  021-assess-docs-portal-and-entrypoints.md  022-assess-architecture-index-and-core-concepts.md  023-assess-architecture-correctness-and-lifecycle.md  024-assess-architecture-security-and-contracts.md  025-assess-architecture-data-versioning-and-data-model.md  026-assess-architecture-c4-and-containers.md  027-assess-architecture-operations-and-deployment.md  028-assess-specs-index-and-governance.md  029-assess-spec-platform-surface-dag-config.md  030-assess-specs-chain-sync-and-ingestion.md  031-assess-specs-query-surface.md  032-assess-specs-udf-surface.md  033-assess-specs-alerting-surface.md  034-assess-specs-metadata-and-error-contracts.md  035-assess-operator-specs-catalog.md  036-assess-adrs-structure-and-durability.md  037-assess-examples-folder-cohesion.md  038-assess-planning-docs-cohesion.md  039-assess-harness-docs-entrypoint.md  040-audit-orphaned-or-duplicate-docs.md  (+26 more)
crates/trace-core/: Cargo.toml
crates/trace-core/src/: aws.rs  fixtures.rs  lib.rs  manifest.rs  query.rs  runtime.rs  udf.rs  udf_bundle.rs
crates/trace-core/src/lite/: jwt.rs  mod.rs  pgqueue.rs  s3.rs
crates/trace-dispatcher/: Cargo.toml
crates/trace-dispatcher/src/: chain_sync.rs  head_observer.rs  lib.rs  main.rs  planner.rs  status.rs
crates/trace-dispatcher/tests/: pause_resume.rs  planner.rs  status.rs
crates/trace-lite/: Cargo.toml
crates/trace-query-service/: Cargo.toml
crates/trace-query-service/src/: config.rs  dataset.rs  duckdb.rs  lib.rs  main.rs
crates/trace-query-service/tests/: task_query.rs
crates/trace-sink/: Cargo.toml
crates/trace-sink/src/: lib.rs
docs/: FEATURES.md  README.md  readme.md
docs/_legacy/: readme_20251231.md
docs/adr/: 0001-orchestrator.md  0002-networking.md  0003-udf-bundles.md  0004-alert-event-sinks.md  0005-query-results.md  0006-buffered-postgres-datasets.md  0007-input-edge-filters.md  0008-dataset-registry-and-publishing.md  0009-atomic-cutover-and-query-pinning.md  0010-trace-core-error-contract.md  README.md  _template.md
docs/agent/: AGENTS.shared.md  SETUP_SYNC.md  checklist.md  references.md
docs/architecture/: README.md  architecture.md  c4.md  contracts.md  dag_deployment.md  data_versioning.md  db_boundaries.md  erd.md  event_flow.md  functional.md  invariants.md  non-functional.md  operations.md  overview.md  prd.md  proposed_simplification.md  query_service.md  security.md  task_lifecycle.md  testing.md  user_api_contracts.md
docs/capabilities/: alerting.md  dag_configuration.md  gateway.md  infrastructure.md  ingestion.md  metadata.md  orchestration.md  pii.md  udf.md
docs/deploy/: README.md  deployment_profiles.md  infrastructure.md  lite_local_cryo_sync.md  monitoring.md
docs/examples/: README.md  chain_liveliness_monitoring.md  chain_sync.ethereum_mainnet.yaml  chain_sync.monad_mainnet.yaml  data_verification.md  lite_local_cryo_sync.md  rpc_integrity_checking.md  validator_monitoring.md
docs/features/: alerting.md  dag_configuration.md  ingestion.md  metadata.md  udf.md
docs/plan/: README.md  backlog.md  build.md  docs_restructure_stage0.md  implementation_sequence.md  milestones.md  milestones_archive.md  plan.md  tasks.json  trace_lite.md
docs/prd/: prd.md
docs/runbooks/: data_verification.md
docs/specs/: README.md  _mini_template.md  _template.md  alerting.md  chain_sync_entrypoint.md  cryo_library_adapter.md  dag_configuration.md  dispatcher_extraction.md  ingestion.md  lite_chain_sync_planner.md  metadata.md  query_service_query_results.md  query_service_task_query.md  query_sql_gating.md  (+6 more)
harness/: .env.example  AGENT_TASKS.md  Cargo.toml  NOTES.md  README.md  docker-compose.yml
harness/diagnostics/duplicate_tx_detection/: README.md  tx_45000.parquet  tx_46000.parquet  tx_fake_duplicate.parquet
harness/diagnostics/staking_withdrawal_verification/: README.md  query.sql  run.sh
harness/diagnostics/tvl_drop_detection/: README.md  erc20_token_tvl.sql  native_mon_tvl.sql  run.sh
harness/migrations/data/: 0001_init.sql  0002_query_audit.sql  0003_user_query_audit.sql
harness/migrations/state/: 0001_init.sql  0002_dataset_versions.sql  0003_chain_sync_cursor.sql  0004_dataset_versions_storage_glob.sql  0005_chain_sync_jobs.sql  0006_chain_head_observations.sql  0007_chain_head_observations_by_pool.sql
harness/src/: config.rs  constants.rs  cryo_worker.rs  dispatcher.rs  dispatcher_client.rs  enqueue.rs  invoker.rs  jwt.rs  lib.rs  local_process_invoker.rs  main.rs  migrate.rs  pgqueue.rs  runner.rs  s3.rs  sink.rs  worker.rs
harness/tests/: invariants.rs  smoke.rs
harness/tests/duplicate_tx_detection/: README.md  run_test.sh
scripts/: sync_agent_standards.cts  sync_agent_standards.mjs
(+91 files in other folders)
