[package]
name = "trace-core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
aws = [
    "dep:aws-config",
    "dep:aws-sdk-lambda",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", optional = true }
aws-sdk-lambda = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
